Wed May 24 16:37:16 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented get_doccount and get_avlength in NetworkDatabase.
	  Only 4 tests left failing with the net backend...

Wed May 24 12:50:19 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Exceptions are now propagated over the net link.

	* OmError's get_msg() method is now const.

Tue May 23 17:51:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add a LocalMatch::gather_query_statistics() method, to be called
	  before building the query tree, so that the tree can be pruned
	  based on the termweights of some of the probabalistic terms.

Tue May 23 17:34:30 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed max_attain for net backend.

Tue May 23 16:57:44 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Made RSets work with network db.

Tue May 23 16:36:25 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix bug due to uninitialised members in OmDocumentTerm.

Tue May 23 14:51:10 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed boolean queries with the net backend.

Tue May 23 14:06:40 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* apitest sleepy tests now remove the generated indexes before
	  running.

Tue May 23 12:18:31 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* SocketServer now correctly handles more than one query.

Tue May 23 12:00:38 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a NetworkTermList object.  Currently a fair way from working
	  correctly, but it does compile:  uses lots of unimplemented
	  methods.

	* General work on termlists (documentation comments, code tidying),
	  and expand.

Mon May 22 18:36:43 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* ProgClient and omprogsrv can both now take more than one database
	  argument.

	* Net stuff now doesn't bomb out from SIGPIPE.

	* Miscellaneous bug fixes
